--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,28 +3,18 @@ version: '3.8'
 services:
   db:
     image: mysql:8.0
-    container_name: mysql_server
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: event
     ports:
-      - "3306:3306"  # expose mysql to localhost
-    networks:
-      - mynetwork
+      - "3306:3306"
 
   web:
     build: .
-    container_name: php_server
     ports:
-      - "8080:80"   # expose apache
+      - "80:80"
+    volumes:
+      - .:/var/www/html
     depends_on:
       - db
-    networks:
-      - mynetwork
-    extra_hosts:
-      - "localhost:host-gateway"   # <<< important sur Windows!
-
-networks:
-  mynetwork:
-    driver: bridge
